# pandoc-creole

./: .gitignore  pandoc-creole.cabal
src/Text/Pandoc/Readers/: Creole.hs
stuff/: creole10_with_extension.g
test/: Spec.hs
test/fixtures/: test001.creole  test002.creole
