name: pandoc-creole
version: 0.1.0.0
synopsis: Initial project template from stack
description: Please see README.md
homepage: https://github.com/tdammers/pandoc-creole#readme
license: BSD3
license-file: LICENSE
author: Tobias Dammers
maintainer: tdammers@gmail.com
copyright: 2016 Tobias Dammers
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
    hs-source-dirs: src
    exposed-modules: Text.Pandoc.Readers.CustomCreole
    build-depends: base >= 4.7 && < 5
                 , pandoc >= 2.0 && < 3
                 , parsec
    
    default-language: Haskell2010

test-suite pandoc-creole-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends: base
                 , pandoc
                 , pandoc-creole
                 , file-embed
                 , tasty
                 , tasty-hunit
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

source-repository head
    type: git
    location: https://github.com/tdammers/pandoc-creole
